[package]
name = "prust"
version = "0.1.1"
edition = "2021"
build = "build.rs"
links = "com.esri.prt.core"
authors = ["Simon Haegler <shaegler@esri.com>"]
description = "Rust bindings for the Procedural Runtime of ArcGIS CityEngine."
repository = "https://github.com/mistafunk/prust"
homepage = "https://github.com/mistafunk/prust"
license = "Apache-2.0"
categories = ["api-bindings"]
keywords = ["CityEngine", "PRT", "CGA", "ArcGIS", "Esri"]

[dependencies]
libc = "0.2.139"
widestring = "1.0.2"

[build-dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
tempfile = "3.3.0"
zip-extract = "0.1.1"
url = "2.3.1"
cmake = "0.1.49"

[profile.release-with-debug]
inherits = "release"
debug = true