[package]
name = "prust"
version = "0.2.2"
edition = "2021"
build = "build.rs"
links = "com.esri.prt.core"
authors = ["Simon Haegler <shaegler@esri.com>"]
description = "Rust bindings for the Procedural Runtime of ArcGIS CityEngine."
repository = "https://github.com/mistafunk/prust"
homepage = "https://github.com/mistafunk/prust"
license = "Apache-2.0"
categories = ["api-bindings"]
keywords = ["CityEngine", "PRT", "CGA", "ArcGIS", "Esri"]

[dependencies]
libc = "0.2.171"
widestring = "1.2.0"
ctor = "0.4.1"
lazy_static = "1.5.0"
derive_builder = "0.20.2"

[build-dependencies]
cc = "1.2.17"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tempfile = "3.19.1"
zip-extract = "0.2.1"
url = "2.5.4"
cmake = "0.1.54"

[profile.dev.package.prust]
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true